# nv-synthforge

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cloudbuild.frontend.yaml  docker-compose.yml
.github/_workflows_pending/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/domain/: finance.py  healthcare.py  hr.py  invoice.py  legal.py  registry.py  retail.py  support.py
backend/app/providers/: __init__.py  nemo.py
backend/app/services/: artifacts.py  benchmarking.py  finance_generation.py  generation.py  healthcare_generation.py  hr_generation.py  legal_generation.py  ocr_eval.py  persistence.py  quality.py  retail_generation.py  support_generation.py
backend/tests/: test_api.py  test_artifacts.py  test_domain.py  test_generation.py  test_healthcare.py  test_legal.py  test_nemo.py  test_ocr_eval.py  test_structured_domains.py  test_support.py
docs/: API.md  ARCHITECTURE.md  CLOUD_RUN.md  HACKATHON.md  hackathon-track-c.md  track-c-architecture.html
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: app-shell.tsx  benchmark-client.tsx  dashboard-overview.tsx  document-preview.tsx  gallery-client.tsx  invoice-preview.tsx  ocr-bench-client.tsx  studio-client.tsx  ui.tsx
frontend/src/lib/: api.test.ts  api.ts  format.ts  mock-data.ts  types.ts
scripts/: _wire_legal.py  _wire_legal_frontend.py  demo-track-c.ps1  demo-track-c.sh  e2e-smoke.py  ocr-demo-smoke.py  smoke-test.sh  validate-infra.py
(+4 files in other folders)
