[project]
name = "nv-synthforge-backend"
version = "0.1.0"
description = "NV-SynthForge synthetic data backend"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "jinja2>=3.1,<4",
  "pillow>=12.2,<13",
  "httpx>=0.28,<1",
  "python-multipart>=0.0.20,<1",
  "reportlab>=4.2,<5",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
nemo = ["data-designer==0.7.0"]
parquet = ["pyarrow>=22,<23"]
pdf = ["weasyprint>=63,<70"]
vision = ["opencv-python-headless>=4.10,<5"]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
